# emergent-primitives

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
primitives/console-sink/: Cargo.toml
primitives/console-sink/src/: main.rs
primitives/exec-common/: Cargo.toml
primitives/exec-common/src/: lib.rs
primitives/exec-handler/: Cargo.toml
primitives/exec-handler/src/: main.rs
primitives/exec-sink/: Cargo.toml
primitives/exec-sink/src/: main.rs
primitives/exec-source/: Cargo.toml  README.md
primitives/exec-source/src/: main.rs
primitives/github-sink/: Cargo.toml
primitives/github-sink/src/: main.rs
primitives/github-source/: Cargo.toml
primitives/github-source/src/: main.rs
primitives/http-sink/: Cargo.toml  README.md
primitives/http-sink/src/: main.rs
primitives/http-source/: Cargo.toml  README.md
primitives/http-source/src/: main.rs
primitives/slack-sink/: Cargo.toml
primitives/slack-sink/src/: main.rs
primitives/slack-source/: Cargo.toml
primitives/slack-source/src/: main.rs
primitives/sse-sink/: main.ts
primitives/stream-runner/: Cargo.toml
primitives/stream-runner/src/: main.rs
primitives/topology-viewer/: graph.ts  main.ts  types.ts
primitives/topology-viewer/static/: app.js  index.html  style.css
primitives/websocket-handler/: main.ts
sdks/ts/: deno.json  mod.ts  package.json
sdks/ts/src/: client.ts  errors.ts  handler.ts  helpers.ts  message.ts  protocol.ts  sink.ts  source.ts  stream.ts  system-events.ts  types.ts
