[workspace]
resolver = "3"
members = [
    "primitives/console-sink",
    "primitives/exec-source",
    "primitives/github-sink",
    "primitives/github-source",
    "primitives/http-sink",
    "primitives/http-source",
    "primitives/slack-sink",
    "primitives/slack-source",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Govcraft/emergent-primitives"

[workspace.dependencies]
# Core
emergent-client = { git = "https://github.com/Govcraft/emergent", version = "0.5" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# GitHub
octocrab = "0.42"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Async utilities
futures = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
