[workspace]
resolver = "3"
members = [
    "primitives/exec-common",
    "primitives/exec-handler",
    "primitives/exec-sink",
    "primitives/exec-source",
    "primitives/http-source",
]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Govcraft/emergent-primitives"

[workspace.dependencies]
# Core
emergent-client = "0.10"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"

# Crypto (HMAC signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Async utilities
futures = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
