[package]
name = "console-sink"
description = "Console output sink for Emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "console-sink"
path = "src/main.rs"

[dependencies]
emergent-client.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
