[package]
name = "exec-common"
description = "Shared command execution logic for Emergent exec primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
