[package]
name = "exec-source"
description = "Shell command executor source for Emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "exec-source"
path = "src/main.rs"

[dependencies]
emergent-client.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
