[package]
name = "github-sink"
description = "GitHub API client for Emergent (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "github-sink"
path = "src/main.rs"

[dependencies]
emergent-client.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
