[package]
name = "http-source"
description = "HTTP webhook receiver for Emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "http-source"
path = "src/main.rs"

[dependencies]
emergent-client.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[lints]
workspace = true
