[package]
name = "slack-sink"
description = "Slack message poster for Emergent (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "slack-sink"
path = "src/main.rs"

[dependencies]
emergent-client.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
